force-app/main/default/objects/Invoice_Line_Item__c/Invoice_Line_Item__c.object-meta.xml
<CustomObject>
    <description>***DRAFT pending integraton of Invoice records*** Integrated with M3 as &quot;Display Only&quot; data (not stored in Salesforce)</description>
    <label>Invoice Line Item</label>
    <nameField>
        <displayFormat>ILI-{0000}</displayFormat>
        <label>Invoice Line Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoice Line Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>