force-app/main/default/objects/Invoice_Line_Item__c/fields/Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Date__c</fullName>
    <description>Integrated with M3 as &quot;Display Only&quot; data (not stored in Salesforce)</description>
    <label>Invoice Date</label>
    <type>Date</type>
</CustomField>