force-app/main/default/objects/Invoice_Line_Item__c/fields/Invoice_Line_Number__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Line_Number__c</fullName>
    <description>Integrated with M3 as &quot;Display Only&quot; data (not stored in Salesforce)</description>
    <externalId>true</externalId>
    <label>Invoice Line Number</label>
    <length>5</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>