force-app/main/default/objects/Invoice_Line_Item__c/fields/Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Number__c</fullName>
    <description>Integrated with M3 as &quot;Display Only&quot; data (not stored in Salesforce)</description>
    <label>Invoice Number</label>
    <length>9</length>
    <type>Text</type>
</CustomField>