force-app/main/default/objects/Invoice_Line_Item__c/fields/Invoiced_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Invoiced_Quantity__c</fullName>
    <description>Integrated with M3 as &quot;Display Only&quot; data (not stored in Salesforce)</description>
    <label>Invoiced Quantity</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>