force-app/main/default/objects/Invoice_Line_Item__c/fields/Item_Number__c.field-meta.xml
<CustomField>
    <fullName>Item_Number__c</fullName>
    <description>Integrated with M3 as &quot;Display Only&quot; data (not stored in Salesforce)</description>
    <label>Item Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>