force-app/main/default/objects/Invoice_Line_Item__c/fields/M3_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>M3_Order_Number__c</fullName>
    <description>Integrated with M3 as &quot;Display Only&quot; data (not stored in Salesforce)</description>
    <label>M3 Order Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>