force-app/main/default/objects/Invoice_Line_Item__c/fields/Unit_of_Measure__c.field-meta.xml
<CustomField>
    <fullName>Unit_of_Measure__c</fullName>
    <description>Integrated with M3 as &quot;Display Only&quot; data (not stored in Salesforce)</description>
    <label>Unit of Measure</label>
    <length>3</length>
    <type>Text</type>
</CustomField>